tests/constructor/constructor.exp
Error ---------------------------------------------------------------------------------------------- constructor.js:6:19

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   6|     constructor():number { }
                        ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- constructor.js:15:10

Cannot cast `new Foo(...)` to `Bar` because number [1] is incompatible with string [2] in type argument `T` [3].
[incompatible-cast]

   constructor.js:15:10
   15| (new Foo(123): Bar<string>); // error, number !~> string
                ^^^ [1]

References:
   constructor.js:15:20
   15| (new Foo(123): Bar<string>); // error, number !~> string
                          ^^^^^^ [2]
   constructor.js:10:19
   10| declare class Bar<T> {}
                         ^ [3]


Error --------------------------------------------------------------------------------------------- constructor.js:22:10

Cannot cast `new Baz(...)` to `Baz` because number [1] is incompatible with string [2] in type argument `T` [3].
[incompatible-cast]

   constructor.js:22:10
   22| (new Baz(123): Baz<string>); // error, number !~> string
                ^^^ [1]

References:
   constructor.js:22:20
   22| (new Baz(123): Baz<string>); // error, number !~> string
                          ^^^^^^ [2]
   constructor.js:18:19
   18| declare class Baz<T> {
                         ^ [3]



Found 3 errors
